find match by multiples ids
